Ajuste en los directorios

--- a/LoginZad/src/main/AndroidManifest.xml
+++ b/LoginZad/src/main/AndroidManifest.xml
@@ -11,13 +11,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AllMark">
         <activity
-            android:name="com.test.LoginZad.DashBoard"
+            android:name="com.test.LoginZad.Sesion.DashBoard"
             android:exported="true" />
         <activity
-            android:name="com.test.LoginZad.RegisterActivity"
+            android:name="com.test.LoginZad.Sesion.RegisterActivity"
             android:exported="true" />
         <activity
-            android:name="com.test.LoginZad.LoginActivity"
+            android:name="com.test.LoginZad.Sesion.LoginActivity"
             android:exported="true" />
         <activity
             android:name="com.test.LoginZad.MainActivity"
